Pushing default memory settings for mvn tests because multiple developers can't run tests without them.